<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/person_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/login_header_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/login_page_top_padding"
                    android:text="@string/tmdb_login_header"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/white_color" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:text="@string/tmdb_login_body"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/grey_color" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_header_body">
                <!-- Login progress -->
                <ProgressBar
                    android:id="@+id/login_progress"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="20dp"
                    android:visibility="invisible" />

                <LinearLayout
                    android:id="@+id/login_form_linearlayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_username"
                            android:inputType="textEmailAddress|text"
                            android:maxLines="1" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:inputType="textPassword"
                            android:maxLines="1" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/sign_in_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:text="@string/action_sign_in"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/cancel_button"
                            style="?android:textAppearanceSmall"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_weight="1"
                            android:text="@string/action_cancel"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/sign_up_button"
                            style="?android:textAppearanceSmall"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_weight="1"
                            android:text="@string/action_sign_up"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
