<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/movie_detail_tmdb_rating_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primary"
    android:orientation="vertical"
    android:paddingEnd="@dimen/m_design_screen_edge_left_right_margin"
    android:paddingLeft="@dimen/m_design_screen_edge_left_right_margin"
    android:paddingRight="@dimen/m_design_screen_edge_left_right_margin"
    android:paddingStart="@dimen/m_design_screen_edge_left_right_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/movie_detail_tmdb_rating_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/tmdb_rating_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/white_color" />

        <TextView
            android:id="@+id/movie_detail_tmdb_rating_vote_count_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingLeft="@dimen/m_design_space_between_content_area"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/tmdb_rating_vote_count_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/white_color" />
        <TextView
            android:id="@+id/movie_detail_tmdb_rating_vote_count_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingLeft="@dimen/m_design_space_between_content_area"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/tmdb_rating_vote_count_val"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/white_color" />
        <TextView
            android:id="@+id/movie_detail_tmdb_rating_vote_count_trailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingLeft="@dimen/m_design_space_between_content_area"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/tmdb_rating_vote_count_closing_brace"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/white_color" />
    </LinearLayout>

    <RatingBar
        android:id="@+id/movie_detail_tmdb_rating_bar"
        style="?android:attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:isIndicator="true"
        android:numStars="10"
        android:rating="3.5"
        android:stepSize="0.1" />
</LinearLayout>